--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "kzg-wasm": "^0.4.0",
     "next": "^14.2.8",
     "node-jsonwebtoken": "^0.0.1",
+    "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "uuid": "^10.0.0",
